# no-more-imagenet

./: .pre-commit-config.yaml  Makefile  README.md  config.yaml  main.py  mypy.ini  pyproject.toml
app/: __init__.py  config.py  data.py  losses.py  modules.py  transforms.py
app/data/: __init__.py  chexpert.py  core.py
app/losses/: __init__.py  info_nce.py
app/metrics/: __init__.py  core.py  info_nce.py
app/models/: __init__.py  base.py  resnet.py
app/schemas/: __init__.py  base.py  core.py  data.py  losses.py  metrics.py  models.py  transforms.py
